# PUMI

./: .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile_v0.1  Dockerfile_v0.2  Dockerfile_v0.3  Dockerfile_v0.4  Dockerfile_v0.5  Dockerfile_v0.6  Dockerfile_v0.7  MANIFEST.in  README.md  README.rst  definitions.py  deploy.sh  deploy_full.sh  deploy_slim.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy_slim_image.yml  docker-image.yml  tast_and_deploy_slim.yml  test_and_dockerize.yml
Docs/: PUMI.pipelines.anat.rst  PUMI.pipelines.func.rst  PUMI.pipelines.multimodal.rst  PUMI.pipelines.rst  PUMI.plot.rst  PUMI.rst  conf.py  dev_docs.md  examples.rst  index.rst  running_on_slurm_cluster.md  running_with_docker.md  windows_setup.html  windows_setup.md
Docs/doctrees/: PUMI.doctree  PUMI.interfaces.doctree  PUMI.pipelines.multimodal.doctree  conf.doctree  definitions.doctree  environment.pickle  index.doctree  modules.doctree
PUMI/: PAINTeR.py  _version.py  default.py  engine.py  globals.py  settings.ini  utils.py
PUMI/anat_preproc/: Better.py
PUMI/engine/: __init__.py  apps.py  base.py  bids.py  node.py  parameters.py  pipelines.py  reproducibility.py  utils.py  version.py  workflow.py
PUMI/func_preproc/: Onevol.py
PUMI/interfaces/: HDBet.py  ImgExtraction.py
PUMI/plot/: carpet_plot.py  connectivity.py  image.py  timeseries.py
PUMI/utils/: QC.py  __init__.py  atlas.py  config.py  globals.py  image.py  image_transformations.py  plotting.py  qc.py  references.py  rpn.py  statistics.py  textfile_transformations.py  timeseries.py
PUMI/utils_obsolate/: QC.py
data_in/: readme.md  rpn_model.json
data_in/dw_dataset/: dataset_description.json  participants.tsv
data_in/pumi-unittest/: dataset_description.json  participants.tsv  task-rest_bold.json
docs/source/: PUMI.func_preproc.info.rst  PUMI.func_preproc.rst  PUMI.plot.rst  conf.py  (+3 more)
examples/: bet_bids_func_subworkflow.py  bet_bids_subworkflow.py  bet_iterable.py  bet_mapnode.py  bet_subworkflow.py  bet_subworkflow_func.py  carpet_plot.py  defacing_ex_bids.py  despiking_bids_ex.py  ex_anat2mni.py  ex_atlas.py  ex_bids_pipeline.py  ex_compcor.py  ex_deepbet.py  ex_defacing.py  ex_despiking.py  ex_func_proc.py  ex_func_to_anat.py  ex_func_to_anat_bids.py  ex_motion_correction.py  ex_tmpfilt.py  get_rpn_model.py  motion_correction_bids_ex.py  rpn_preproc.py
pipelines/: bids-apps-example.py  conn_matrix.py  deepbet-rcpl.py  example-bids-app.py  func2standard_app.py  hcp.py  hcp_lr_only.py  hcp_rcpl.py  hcp_rcpl_slurm.py  pain_sensitivity_prediction.py  rcpl-unittests.py  rcpl.py  rcpl_ds000243.py  rcpl_ds001747.py  rcpl_ds001907.py  rcpl_ds002330.py  rcpl_ds003346.py  rcpl_ds004109.py  rcpl_ds004299.py  rcpl_ds004349.py  rcpl_ds004392.py  rcpl_ds004636.py  rcpl_ds004648.py  rcpl_ds004965.py  rcpl_ds005016.py  rcpl_ds005026.py  rcpl_light.py  rcpl_neurocon.py  rcpl_taowu.py  rcpl_with_FUGUE_fieldmap_correction.py  rcpl_with_fieldmap_correction.py  rcpl_with_func2sbref.py  rcpl_with_topup_fieldmap_correction.py  rpn-signature.py  rpn_atlas_opt.py  rpn_preproc.py  rpn_signature.py  rpn_signature_timeseries_.py  rpn_signature_timeseries_tests.py
resources/: model_rpn.json  rcpl_model.sav
scripts/: apptainer-pipeline-executor  bet_mapnode.py  check_logs.py  cluster-pipeline-executor.sh  docker-pipeline-executor  run_pumi_docker  run_pumi_docker_nfs  slurm-apptainer-pipeline-executor
tests/: test_afni.py  test_ants.py  test_fsl.py
(+119 files in other folders)
