[tool.poetry]
name = "PUMI"
version = "0.0.0.post132.dev0+2fe40cd" # managed by poetry-dynamic-versioning
description = "Pipelines and Utilities based on a Modulare Inventory"
authors = ["Tamas Spisak <tamas.spisak@uni-due.de>"] #todo all devs here
packages = [
     { include = "PUMI" },
     { include = "pipelines" },
     { include = "resources" }
    ]
license = "GPL-3.0-or-later"
repository = "https://github.com/pni-lab/PUMI"
homepage = "https://pumi.readthedocs.io"
documentation = "https://pumi.readthedocs.io"
readme = 'README.md'
keywords = [
    "neuroimaging",
    "pipeline",
    "nipype",
    "RPN"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8"
networkx = "<3"
dot2tex = ">=2.11.3"
templateflow = ">=0.8.0"
graphviz = ">=0.17"
matplotlib = ">=3.5.2"
numpy = ">=1.21.1"
scipy = ">=1.7.1"
numpydoc = ">=1.1.0"
nbsphinx = ">=0.8.6"
pytest = ">=7.1.2"
nipype = ">=1.8.1"
neurodocker = ">=0.8.0"
nilearn = ">=0.9.1"
pybids = ">=0.15.1"
poetry = ">=1.1.13"
poetry-dynamic-versioning = ">=0.17.1"
pydeface = ">=2.0.0"
seaborn = ">=0.11.2"
myst-parser = "*"
nibabel = ">=5.0.0"
hd-bet = { git = "https://github.com/MIC-DKFZ/HD-BET.git" }
deepbet = "*"
scikit-learn = "1.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
rpn_signature = 'pipelines.rpn_signature.rpn_app:run'
rpn_signature_timeseries = 'pipelines.rpn_signature_timeseries.rpn_app:run'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


